- アイテムごとのオファー編集テンプレートを共通化

--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -26,233 +26,23 @@
                     追加特性
                 </a>
             </li>
+            <%
+            const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+                ? process.env.PROJECT_CREATOR_IDS.split(',')
+                : [];
+            %>
+            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link4" role="tablist">
                     高度な設定
                 </a>
             </li>
+            <% } %>
         </ul>
 
         <div class="tab-content">
             <div class="tab-pane active show" id="link1">
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-3">
-                        <label for="identifier" class="bmd-label-static">
-                            コード<span class="text-danger">＊</span>
-                        </label>
-                        <% if (isNew) { %>
-                        <input type="text" class="form-control" name="identifier" id="identifier" placeholder=""
-                            maxlength=30 value="<%= forms.identifier %>">
-                        <span class="bmd-help">半角30文字以内でご入力ください</span>
-                        <% } else { %>
-                        <label for="identifier" class="bmd-label-static">
-                            コード<span class="text-danger">＊</span>
-                        </label>
-                        <input type="text" disabled class="form-control" value="<%= forms.identifier %>">
-                        <input type="hidden" name="id" value="<%= forms.id %>">
-                        <input type="hidden" name="identifier" value="<%= forms.identifier %>">
-                        <% } %>
-                        <% if (errors && errors.identifier) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors.identifier.msg %>
-                        </span>
-                        <% } %>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-3">
-                        <label for="itemOffered[typeOf]" class="bmd-label-static">
-                            アイテム<span class="text-danger">＊</span>
-                        </label>
-                        <select class="form-control" name="itemOffered[typeOf]">
-                            <% productTypes.forEach((productType) => { %>
-                            <option value="<%= productType.codeValue %>"
-                                <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === productType.codeValue) { %>
-                                selected<% } else { %> disabled<% } %>><%= productType.name %></option>
-                            <% }) %>
-                        </select>
-                        <% if (errors && errors['itemOffered[typeOf]']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['itemOffered[typeOf'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-3">
-                        <label for="category[codeValue]" class="bmd-label-static">
-                            カテゴリー
-                        </label>
-                        <select class="form-control" name="category[codeValue]">
-                            <option value="" selected>指定しない</option>
-                            <% for (let ticketTypeCategory of ticketTypeCategories) { %>
-                            <option value="<%= ticketTypeCategory.codeValue %>"
-                                <% if (forms.category !== undefined && forms.category.codeValue === ticketTypeCategory.codeValue ) { %>
-                                selected <% } %>>
-                                <%= ticketTypeCategory.name.ja %>
-                            </option>
-                            <% } %>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="name[ja]" class="bmd-label-static">
-                            名称<span class="text-danger">＊</span>
-                        </label>
-                        <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder=""
-                            maxlength=64 value="<%=forms.name.ja %>">
-                        <span class="bmd-help">全角64文字以内でご入力ください</span>
-                        <% if (errors && errors['name.ja']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['name.ja'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="name[en]" class="bmd-label-static">
-                            英語名称<span class="text-danger">＊</span>
-                        </label>
-                        <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder=""
-                            maxlength=64 value="<%=forms.name.en %>">
-                        <span class="bmd-help">半角64文字以内でご入力ください</span>
-                        <% if (errors && errors['name.en']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['name.en'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="alternateName[ja]" class="bmd-label-static">
-                            代替名称(管理名称)<span class="text-danger">＊</span>
-                        </label>
-                        <input type="text" class="form-control" name="alternateName[ja]" id="alternateName[ja]"
-                            placeholder="" maxlength=64
-                            value="<%= (forms.alternateName!==undefined && forms.alternateName!==null) ? forms.alternateName.ja : '' %>">
-                        <span class="bmd-help">全角64文字以内でご入力ください</span>
-                        <% if (errors && errors['alternateName.ja']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['alternateName.ja'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="priceSpecification[price]" class="bmd-label-static">
-                            発生金額<span class="text-danger">＊</span>
-                        </label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" name="priceSpecification[price]"
-                                id="priceSpecification[price]" placeholder="" maxlength=10 value="<%= (forms.priceSpecification !== undefined && forms.priceSpecification !== null && forms.priceSpecification.price !== undefined)
-                                 ? String(forms.priceSpecification.price)
-                                  : '' %>">
-
-                            <div class="input-group-append">
-                                <span class="input-group-text">円 /</span>
-                            </div>
-
-                            <input type="number" class="form-control"
-                                name="priceSpecification[referenceQuantity][value]"
-                                id="priceSpecification[referenceQuantity][value]" placeholder="" maxlength=10
-                                value="<%= (forms.priceSpecification !== undefined && forms.priceSpecification !== null && forms.priceSpecification.referenceQuantity !== undefined) ? String(forms.priceSpecification.referenceQuantity.value) : '' %>">
-
-                            <%
-                            const unitCodes = [
-                                {codeValue: 'C62', name: '個'},
-                                {codeValue: 'ANN', name: '年'},
-                                {codeValue: 'DAY', name: '日'},
-                                {codeValue: 'SEC', name: '秒'},
-                            ];
-                            %>
-                            <select class="form-control" name="priceSpecification[referenceQuantity][unitCode]">
-                                <% unitCodes.forEach((unitCode) => { %>
-                                <option value="<%= unitCode.codeValue %>"
-                                    <% if (forms.priceSpecification !==undefined && forms.priceSpecification !== null &&
-                                        forms.priceSpecification.referenceQuantity !== undefined &&
-                                        String(forms.priceSpecification.referenceQuantity.unitCode) === unitCode.codeValue ) { %> selected <% } %>>
-                                    <%= unitCode.name %>
-                                </option>
-                                <% }) %>
-                                </option>
-                            </select>
-                        </div>
-                        <span class="bmd-help">半角10文字以内でご入力ください</span>
-                        <% if (errors && errors['priceSpecification.price']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['priceSpecification.price'].msg %>
-                        </span>
-                        <% } %>
-                        <% if (errors && errors['priceSpecification.referenceQuantity.value']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['priceSpecification.referenceQuantity.value'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="description[ja]" class="bmd-label-static">
-                            補足説明
-                        </label>
-                        <input type="text" class="form-control" name="description[ja]" id="description[ja]"
-                            placeholder="" maxlength=64
-                            value="<%= (forms.description!==undefined && forms.description!==null) ? forms.description.ja : '' %>">
-                        <span class="bmd-help">全角64文字以内でご入力ください</span>
-                        <% if (errors && errors['description.ja']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['description.ja'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-
-                    <div class="form-group bmd-form-group col-md-6">
-                        <label for="description[en]" class="bmd-label-static">
-                            補足説明英
-                        </label>
-                        <input type="text" class="form-control" name="description[en]" id="description[en]"
-                            placeholder="" maxlength=64
-                            value="<%= (forms.description!==undefined && forms.description!==null) ? forms.description.en : '' %>">
-                        <span class="bmd-help">半角64文字以内でご入力ください</span>
-                        <% if (errors && errors['description.en']) { %>
-                        <span class="bmd-help text-danger d-block">
-                            <%- errors['description.en'].msg %>
-                        </span>
-                        <% } %>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-12">
-                        <label for="availableAtOrFrom[][id]" class="bmd-label-static">
-                            利用可能アプリケーション
-                        </label>
-
-                        <% applications.forEach((application) => { %>
-                        <%
-                        let checked = false;
-                        if (Array.isArray(forms.availableAtOrFrom) && forms.availableAtOrFrom.some((a)=>a.id === application.id)) {
-                            checked = true;
-                        }
-                        %>
-                        <div class="form-check form-check-inline">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
-                                    <% } %> value="<%= application.id %>"
-                                    name="availableAtOrFrom[id]"><%= application.name %>
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div>
-                        <% }) %>
-                    </div>
-                </div>
+                <%- include('../offers/_formBasic', {}) %>
             </div>
             <div class="tab-pane" id="link2">
                 <div class="form-group bmd-form-group">
