--- a/views/offers/_formBasic.ejs
+++ b/views/offers/_formBasic.ejs
@@ -209,6 +209,25 @@
         </span>
         <% } %>
     </div>
+
+    <div class="form-group bmd-form-group col-md-4">
+        <label for="accountsReceivable" class="bmd-label-static">
+            売上金額<span class="text-danger">＊</span>
+        </label>
+        <div class="input-group">
+            <input type="number" class="form-control" name="accountsReceivable" id="accountsReceivable"
+                placeholder="" maxlength=10 value="<%=forms.accountsReceivable %>">
+            <div class="input-group-append">
+                <span class="input-group-text">円として計上</span>
+            </div>
+        </div>
+        <span class="bmd-help">半角10文字以内でご入力ください</span>
+        <% if (errors && errors.accountsReceivable) { %>
+        <span class="bmd-help text-danger d-block">
+            <%- errors.accountsReceivable.msg %>
+        </span>
+        <% } %>
+    </div>
     <% } %>
 </div>
 
