--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -1,5 +1,9 @@
+<%
+const productType = productTypes.find((p) => p.codeValue === forms.itemOffered.typeOf);
+const productTypeName = (productType !== undefined) ? productType.name : forms.itemOffered.typeOf;
+%>
 <%- contentFor('title') %>
-オファー作成
+<%= productTypeName %>オファー作成
 <%- contentFor('displayId') %>
 OF-3
 <%- contentFor('styles') %>
