- オファー検索最適化

--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -159,8 +159,10 @@ const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string'
                             <th>売上金額</th>
                             <th>カテゴリー</th>
                             <th>アプリ</th>
-                            <th>有効期間</th>
                             <th>アドオン</th>
+                            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+                            <th>有効期間</th>
+                            <% } %>
                             <th>カタログ</th>
                             <th>追加特性</th>
                         </tr>
@@ -175,26 +177,31 @@ const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string'
                             </td>
                             <td name="id__identifier__itemOffered.typeOf">$identifier$</td>
                             <td name="itemOfferedName">$itemOfferedName$</td>
-                            <td name="alternateName.ja|slice">$alternateName.ja$</td>
+                            <td name="alternateName.ja|slice:10">$alternateName.ja$</td>
                             <td name="priceStr">$priceStr$</td>
                             <td name="priceSpecification.accounting.accountsReceivable">
                                 $priceSpecification.accounting.accountsReceivable$</td>
                             <td name="categoryName|slice">$categoryName$</td>
                             <td name="id__availableAtOrFromCount">
                                 <a href="javascript:void(0)" class="showAvailableAtOrFrom" data-id="$id$">
-                                    表示
+                                <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+                                $availableAtOrFromCount$ 
+                                <% } %>
+                                表示
                                 </a>
-                            </td>
-                            <td
-                                name="validFromStr__validFrom|date:YYYY-MM-DD HH:mm:ssZ__validThrough|date:YYYY-MM-DD HH:mm:ssZ">
-                                <a href="javascript:void(0)"
-                                title="$validFrom$ ~ $validThrough$">$validFromStr$</a>
                             </td>
                             <td name="id__addOnCount">
                                 <a href="javascript:void(0)" class="showAddOn" data-id="$id$">
                                     <span>$addOnCount$</span>
                                 </a>
                             </td>
+                            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+                            <td
+                                name="validFromStr__validFrom|date:YYYY-MM-DD HH:mm:ssZ__validThrough|date:YYYY-MM-DD HH:mm:ssZ">
+                                <a href="javascript:void(0)"
+                                title="$validFrom$ ~ $validThrough$">$validFromStr$</a>
+                            </td>
+                            <% } %>
                             <td name="id__showCatalogs">
                                 <a href="javascript:void(0)" class="showCatalogs" data-id="$id$">
                                     表示
