--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -58,13 +58,7 @@ PR-00
                                     <label for="offers[$elemMatch][seller][id]" class="bmd-label-static">
                                         販売者
                                     </label>
-                                    <select class="form-control" name="offers[$elemMatch][seller][id]">
-                                        <option value="">選択してください</option>
-                                        <% for (const seller of sellers) { %>
-                                        <option value="<%= seller.id %>">
-                                            <%= seller.name.ja %>
-                                        </option>
-                                        <% } %>
+                                    <select class="form-control" name="offers[$elemMatch][seller][id]" id="offers[$elemMatch][seller][id]" style="width: 100%;">
                                     </select>
                                 </div>
 
