--- a/views/orders/_dataTables.ejs
+++ b/views/orders/_dataTables.ejs
@@ -1,3 +1,8 @@
+<%
+const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+    ? process.env.PROJECT_CREATOR_IDS.split(',')
+    : [];
+%>
 <div class="material-datatables">
     <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
         <div class="row">
@@ -263,10 +268,13 @@
                             <th>金額</th>
                             <th>アイテム</th>
                             <th>決済方法</th>
-                            <th>代理</th>
                             <th>アプリ</th>
-                            <th>返品者</th>
                             <th>返品日時</th>
+                            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+                            <th>返品者</th>
+                            <th>代理</th>
+                            <th>アクション</th>
+                            <% } %>
                         </tr>
                     </thead>
                     <tbody>
@@ -302,20 +310,27 @@
                                     x $numPaymentMethods$<br><span class="badge badge-light">$paymentMethodTypeStr$</span>
                                 </a>
                             </td>
-                            <td name="orderNumber__broker.typeOf|slice:10">
-                                <a href="javascript:void(0)" class="showBroker" data-orderNumber="$orderNumber$">
-                                    <span class="badge badge-light">$broker.typeOf$</span>
-                                </a>
-                            </td>
                             <td name="application.name|slice:10">$application.name$</td>
+                            <td name="dateReturned|date:YY-MM-DD HH:mm:ssZ">
+                                $dateReturned$
+                            </td>
+                            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
                             <td name="orderNumber__returner.typeOf|slice:10">
                                 <a href="javascript:void(0)" class="showReturner" data-orderNumber="$orderNumber$">
                                     <span class="badge badge-light">$returner.typeOf$</span>
                                 </a>
                             </td>
-                            <td name="dateReturned|date:YY-MM-DD HH:mm:ssZ">
-                                $dateReturned$
+                            <td name="orderNumber__broker.typeOf|slice:10">
+                                <a href="javascript:void(0)" class="showBroker" data-orderNumber="$orderNumber$">
+                                    <span class="badge badge-light">$broker.typeOf$</span>
+                                </a>
                             </td>
+                            <td name="orderNumber__actions">
+                                <a href="javascript:void(0)" class="showActions" data-orderNumber="$orderNumber$">
+                                    表示
+                                </a>
+                            </td>        
+                            <% } %>
                         </tr>
                     </tbody>
                 </table>
