--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -31,7 +31,7 @@ OR-00
     <%- include('show') %>
 
     <div class="modal fade" id="modal-order" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title"></h4>
