--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -1,3 +1,8 @@
+<%
+const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+    ? process.env.PROJECT_CREATOR_IDS.split(',')
+    : [];
+%>
 <div class="material-datatables">
     <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
         <div class="row">
@@ -10,13 +15,8 @@
                             <label for="reservationFor[superEvent][location][id]" class="bmd-label-static">
                                 施設
                             </label>
-                            <select class="form-control" name="reservationFor[superEvent][location][id]">
-                                <option value="">施設選択</option>
-                                <% for (let movieTheater of movieTheaters) { %>
-                                <option value="<%= movieTheater.id %>">
-                                    <%= movieTheater.name.ja %>
-                                </option>
-                                <% } %>
+                            <select class="form-control" name="reservationFor[superEvent][location][id]" id="reservationFor[superEvent][location][id]"
+                                style="width: 100%;">
                             </select>
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
@@ -32,7 +32,7 @@
                                 ステータス
                             </label>
                             <select class="form-control" name="reservationStatus">
-                                <option value="">ステータス選択</option>
+                                <option value="">選択する</option>
                                 <% reservationStatusTypes.forEach(function(reservationStatusType) { %>
                                 <option value="<%= reservationStatusType.codeValue %>">
                                     <%= reservationStatusType.name %>
@@ -47,23 +47,45 @@
                             <input class="form-control" placeholder="追加テキスト" name="additionalTicketText"
                                 id="additionalTicketText" />
                         </div>
-                        <div class="form-group bmd-form-group col-md-2">
-                            <label for="application" class="bmd-label-static">
-                                アプリケーション
+                        <div class="form-group bmd-form-group col-md-4">
+                            <label for="reservationFor[startFrom]" class="bmd-label-static">
+                                イベント開始日
                             </label>
-                            <select class="form-control" name="application" id="application" style="width: 100%;">
-                            </select>
-                        </div>
-                        <div class="form-group bmd-form-group col-md-2">
-                            <label for="admin[id]" class="bmd-label-static">
-                                代理
-                            </label>
-                            <select class="form-control" name="admin[id]" id="admin[id]" style="width: 100%;">
-                            </select>
+
+                            <div class="input-group">
+                                <input class="form-control datepicker" placeholder="" maxlength=10
+                                    name="reservationFor[startFrom]" id="reservationFor[startFrom]" value="" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">から</span>
+                                </div>
+                                <input class="form-control datepicker" placeholder="" maxlength=10
+                                    name="reservationFor[startThrough]" id="reservationFor[startThrough]"
+                                    valufe="" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">まで</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                     <div class="advanced collapse">
+                        <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="application" class="bmd-label-static">
+                                    アプリケーション
+                                </label>
+                                <select class="form-control" name="application" id="application" style="width: 100%;">
+                                </select>
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="admin[id]" class="bmd-label-static">
+                                    代理
+                                </label>
+                                <select class="form-control" name="admin[id]" id="admin[id]" style="width: 100%;">
+                                </select>
+                            </div>
+                        </div>
+
                         <div class="form-row">
                             <div class="form-group bmd-form-group col-md-2">
                                 <label for="reservationFor[id]" class="bmd-label-static">
@@ -78,25 +100,6 @@
                                 </label>
                                 <input type="text" class="form-control" name="reservationFor[superEvent][id]"
                                     id="reservationFor[superEvent][id]" placeholder="施設コンテンツID" />
-                            </div>
-                            <div class="form-group bmd-form-group col-md-4">
-                                <label for="reservationFor[startFrom]" class="bmd-label-static">
-                                    イベント開始日時(From - To)
-                                </label>
-
-                                <div class="input-group">
-                                    <input class="form-control datepicker" placeholder="" maxlength=10
-                                        name="reservationFor[startFrom]" id="reservationFor[startFrom]" value="" />
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">から</span>
-                                    </div>
-                                    <input class="form-control datepicker" placeholder="" maxlength=10
-                                        name="reservationFor[startThrough]" id="reservationFor[startThrough]"
-                                        valufe="" />
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">まで</span>
-                                    </div>
-                                </div>
                             </div>
                         </div>
 
@@ -256,13 +259,15 @@
                             <th>場所</th>
                             <th>チケット</th>
                             <th>座席</th>
-                            <th>チケットホルダー</th>
-                            <th>アプリ</th>
                             <th>追加テキスト</th>
-                            <th>サブ</th>
                             <th>発券</th>
                             <th>入場</th>
                             <th>追加特性</th>
+                            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+                            <th>チケットホルダー</th>
+                            <th>アプリ</th>
+                            <th>サブ</th>
+                            <% } %>
                         </tr>
                     </thead>
                     <tbody>
@@ -317,21 +322,10 @@
                                 $unitPriceSpec.referenceQuantity.value$
                             </td>
                             <td name="ticketedSeatStr"><span class="badge badge-light">$ticketedSeatStr$</span></td>
-                            <td name="id__underName.name|slice:10">
-                                <a href="javascript:void(0)" class="showUnderName" data-id="$id$">
-                                    $underName.name$
-                                </a>
-                            </td>
-                            <td name="application.name|slice:15">$application.name$</td>
                             <td name="additionalTicketText|slice:10__id">$additionalTicketText$
                                 <a href="javascript:void(0)" class="editAdditionalTicketText" data-id="$id$">
                                     <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                 </a></td>
-                            <td name="id__showSubReservation">
-                                <a href="javascript:void(0)" class="showSubReservation" data-id="$id$">
-                                    表示
-                                </a>
-                            </td>
                             <td name="id__checkedInText">
                                 <a href="javascript:void(0)" class="" data-id="$id$">
                                     <i class="material-icons" style="font-size: 1.2em;">$checkedInText$</i>
@@ -347,6 +341,21 @@
                                     表示
                                 </a>
                             </td>
+
+                            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+                            <td name="id__underName.name|slice:10">
+                                <a href="javascript:void(0)" class="showUnderName" data-id="$id$">
+                                    $underName.name$
+                                </a>
+                            </td>
+                            <td name="application.name|slice:15">$application.name$</td>
+                            <td name="id__showSubReservation">
+                                <a href="javascript:void(0)" class="showSubReservation" data-id="$id$">
+                                    表示
+                                </a>
+                            </td>
+                            <% } %>
+    
                         </tr>
                     </tbody>
                 </table>
