--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -1,3 +1,8 @@
+<%
+const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+    ? process.env.PROJECT_CREATOR_IDS.split(',')
+    : [];
+%>
 <%- contentFor('title') %>
 予約管理
 <%- contentFor('displayId') %>
@@ -18,9 +23,11 @@ Aa-11
             <!--        Here you can write extra buttons/actions for the toolbar              -->
             <a class="btn btn-primary btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
+            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
             <a class="btn btn-primary btn-link" data-toggle="collapse" href=".advanced" role="button"
                 aria-expanded="false">
                 <i class="material-icons">filter_list</i> 高度な検索</a>
+            <% } %>
             <a class="btn btn-primary btn-cancel disabled" href="#">
                 <i class="material-icons">cancel</i> キャンセル</a>
             <a class="btn btn-primary btn-downloadCSV" href="#">
