- プロダクト編集をペイメントカードに対応 - 区分にCurrencyTypeを追加

--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -105,7 +105,7 @@
                             <% if (forms.typeOf === 'MembershipService') { %>
                             メンバーシップ区分
                             <% } else if (forms.typeOf === 'PaymentCard') { %>
-                            口座区分
+                            決済方法区分
                             <% } %>
                         </label>
                         <select class="form-control" name="serviceOutputCategory" id="serviceOutputCategory" style="width: 100%;" <% if (!isNew) { %>
